theme/static/css/default.css
@media (min-width: 1400px) {
  .container{
    width: 1320px;
  }
}

.sortable {
  cursor: pointer;
}

.text-break {
  word-break: break-all;
}
.inline-block {
  display: inline-block;
}
.padding-tb-3 {
  padding-top: 3px;
  padding-bottom: 3px;
}
.padding-tb-5 {
  padding-top: 5px;
  padding-bottom: 5px;
}
.fixed-table-layout {
  table-layout: fixed;
}
.keyword-search-input {
  width: 150px;
}

.ellipsis {
  text-overflow: ellipsis;

  /* Required for text-overflow to do anything */
  white-space: nowrap;
  overflow: hidden;
}
#items-table-container th {
  background: white;
  position: sticky;
  top: 0; /* sticky table header */
}

#items-map, #collection-map, #coverages-map {
  width: 100%;
  height: 400px;
}
#items-table-container {
  height: 400px;
  overflow: scroll;
  resize:vertical;
  min-height: 400px;
}
.leaflet-attribution-flag {
  display: none !important;
}

footer.sticky {
  position: fixed;
  width: 100%;
}

table:not(.horizontal) {
  max-height: none;
}

.label-job {
  color: #000;
}

.job-successful {
  background: #d8eeca;
  border-color: #278400;
}

.job-accepted {
  background: #d7faff;
  border-color: #269abc;
}

.job-failed {
  background: #f3e9e8;
  border-color: #d3080c
}

.job-running {
  background: #f9f4d4;
  border-color: #f90;
}

/*
We set the element we are applying our loading mask to relative
*/
.loading-mask {
  position: relative;
}

/*
Because we set .loading-mask relative, we can span our ::before
element over the whole parent element
*/
.loading-mask::before {
  content: '';
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.25);
}

/*
Spin animation for .loading-mask::after
*/
@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(359deg);
  }
}

/*
The loading throbber is a single spinning element with three
visible borders and a border-radius of 50%.
Instead of a border we could also use a font-icon or any
image using the content attribute.
*/
.loading-mask::after {
  content: "";
  position: absolute;
  border-width: 3px;
  border-style: solid;
  border-color: transparent rgb(255, 255, 255) rgb(255, 255, 255);
  border-radius: 50%;
  width: 24px;
  height: 24px;
  top: calc(50% - 12px);
  left: calc(50% - 12px);
  animation: 2s linear 0s normal none infinite running spin;
  filter: drop-shadow(0 0 2 rgba(0, 0, 0, 0.33));
}

.map-wrapper {
  height: 260px;
  width: 300px;
}

.load-over-map::before {
  z-index: 1000;
}

.load-over-map::after {
  z-index: 1000;
}

.leaflet-control-attribution {
  display: none !important;
}

.summary-text {
  white-space: pre-wrap;
}

ul.pd-lft-0 {
  padding-left: 0;
}

[v-cloak] {
  display: none;
}

.collections-displayed {
  float: right;
  width: 250px;
}

